Added icons for status column

--- a/configure.ac
+++ b/configure.ac
@@ -3,4 +3,5 @@ AM_INIT_AUTOMAKE(gnome-virt-manager, 0.0.1)
 
 AC_OUTPUT(Makefile
           src/Makefile
+          pixmaps/Makefile
           gnome-virt-manager.spec)
